paper edits through results

--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -110,7 +110,6 @@ For continuous data with no ties $J=n$. Letting $r(y_i)$ be the rank of $y_i$, t
 p(\boldsymbol{y}|\boldsymbol{x},\boldsymbol{\gamma},\boldsymbol{\beta})=
 \prod_{i=1}^{n}[G(\gamma_{r(y_i)}-\boldsymbol{x_i'\beta})-G(\gamma_{r(y_i)-1}-\boldsymbol{x_i'\beta})]
 \end{gather}
-
 To complete the model specification we define priors for the parameters $p(\boldsymbol{\beta},\boldsymbol{\gamma})$. We assume a priori independence between $\boldsymbol{\beta}$ and $\boldsymbol{\gamma}$ so $p(\boldsymbol{\beta},\boldsymbol{\gamma})=p(\boldsymbol{\beta})p(\boldsymbol{\gamma})$. To simplify the model formulation we also assume noninformative priors for the regression coefficients, $p(\boldsymbol{\beta}) \propto \boldsymbol{1}$ however weakly informative or informative priors can also be used. <!--conditional means approach for defining joint prior from Johnson & ALbert sec 4.2.2 pp 132 -->
 
 Specifying priors for $\boldsymbol{\gamma}$ is more challenging because of the ordering restriction. Several approaches have been suggested in the traditional CPM setting where $J \ll n$. McKinley et al. [@mckinley_bayesian_2015] and Congdon [@congdon_bayesian_2005] describe a sequentially truncated prior distribution: $p(\boldsymbol{\gamma})=p(\gamma_1)\prod_{j=2}^{J-1}p(\gamma_i|\gamma_{j-1})$ where the support of $p(\gamma_1)$ is $\mathbb{R}$ and the support of $p(\gamma_j)$ for $j=2,\ldots, J-1$ is $(\gamma_{j-1},\infty)$. For example using normal and truncated normal priors, $p(\gamma_1)\sim N(0, \sigma_\gamma^2)$ and $p(\gamma_j|\gamma_{j-1}) \sim N(0, \sigma_\gamma^2)I(\gamma_{j-1},\infty)$. A second approach described by Albert and Chib [@albert_bayesian_1997] defines the prior on a transformation of the intercepts to an unconstrained space; first normalizing $\gamma_0$ to 0 so $0 \equiv \gamma_0 < \gamma_1 < \cdots < \gamma_{J-1} <\gamma_J \equiv \infty$ and then letting $\delta_1=\log(\gamma_1)$ and $\delta_j=\log(\gamma_j - \gamma_{j-1}),\, 2 \le j \le J-1$ a multivariate prior can be assigned, e.g. $\boldsymbol{\delta} \sim N_{J-1}(\boldsymbol{\mu_0},\boldsymbol{\Sigma_0})$.
@@ -126,9 +125,7 @@ These equations define a transformation $h(\boldsymbol{\gamma})=\boldsymbol{\pi_
 \label{eq:invtrans}
 \sum_{k=1}^{j}\pi_{.k}=\sum_{k=1}^{j}\left[G(\gamma_k)-G(\gamma_{k-1})\right]=G(\gamma_j)
 \end{gather}
-so $G^{-1}\left(\sum_{k=1}^{j}\pi_{.k}\right)=\gamma_j$ defines the inverse transformation $h^{-1}(\boldsymbol{\pi_{.}})=\boldsymbol{\gamma}$.
-
-Because $\boldsymbol{y}$ has a multinomial distribution a conjugate Dirichlet distribution with hyperparameters $\boldsymbol{\alpha}$ is a natural choice of prior for $\boldsymbol{\pi_{.}}$. Setting $p(\boldsymbol{\pi_{.}}|\boldsymbol{\alpha}) \propto \prod_{j=1}^{J}\pi_{.j}^{\alpha_j-1}$ the posterior distribution is
+so $G^{-1}\left(\sum_{k=1}^{j}\pi_{.k}\right)=\gamma_j$ defines the inverse transformation $h^{-1}(\boldsymbol{\pi_{.}})=\boldsymbol{\gamma}$. Because $\boldsymbol{y}$ has a multinomial distribution a conjugate Dirichlet distribution with hyperparameters $\boldsymbol{\alpha}$ is a natural choice of prior for $\boldsymbol{\pi_{.}}$. Setting $p(\boldsymbol{\pi_{.}}|\boldsymbol{\alpha}) \propto \prod_{j=1}^{J}\pi_{.j}^{\alpha_j-1}$ the posterior distribution is
 \begin{align}
 p(\boldsymbol{\gamma},\boldsymbol{\beta}|\boldsymbol{x},\boldsymbol{y}) & \propto p(\boldsymbol{\gamma})p(\boldsymbol{\beta}) p(\boldsymbol{y}|\boldsymbol{x},\boldsymbol{\gamma},\boldsymbol{\beta})\\
 &\propto p(h(\boldsymbol{\gamma}))|\mathcal{J}|p(\boldsymbol{\beta}) p(\boldsymbol{y}|\boldsymbol{x},\boldsymbol{\gamma},\boldsymbol{\beta})\\
@@ -189,7 +186,7 @@ Each subplot displays the index $j=1,\\ldots,J-1$ on the x-axis and the median, 
 description of how to use Bayesian CPM to get parameter ests. for shifts in distribution and other quantities of interest, e.g. conditional CDF Mean, Quantiles, using a single model
 -->
 
-Using the $s=1,\ldots,S$ MCMC draws from the posterior distribution, ($\tilde{\boldsymbol{\gamma}}^{(s)}$, $\tilde{\boldsymbol{\beta}}^{(s)}$), it is straightforward to calculate the distribution of the posterior conditional CDF, mean, quantiles or other functions of the parameters. For example, the distribution of the posterior conditional CDF at $y_j$ with covariates $\boldsymbol{x}$ can be approximated by the $S$ values $\tilde{F}^{(s)}(y_j|\boldsymbol{x})=G(\tilde{\gamma}_{r(y_j)}^{(s)}-\boldsymbol{x}^{T}\tilde{\boldsymbol{\beta}}^{(s)})$ and the complete conditional CDF can be obtained by a step function connecting $\tilde{F}^{(s)}(y_j|\boldsymbol{x})$ for $j=1,\ldots,J$. The posterior mean distribution conditional on covariates $\boldsymbol{x}$ is approximated by $\tilde{E}^{(s)}[Y|\boldsymbol{x}]=\sum_{j=1}^{J}y_j\tilde{f}^{(s)}(y_j|\boldsymbol{x})$ where $\tilde{f}^{(s)}(y_j|\boldsymbol{x})=\tilde{F}^{(s)}(y_j|\boldsymbol{x})-\tilde{F}^{(s)}(y_{j-1}|\boldsymbol{x})$ and $\tilde{F}^{(s)}(y_0|\boldsymbol{x}) \equiv 0$ so $\tilde{f}^{(s)}(y_1|\boldsymbol{x})=\tilde{F}^{(s)}(y_1|\boldsymbol{x})$. Note that for mixed continuous/discrete outcomes, such as those arising from a detection limit, data below or above the limit do not have a known $y_j$ value. To estimate the $q^{th}$ posterior conditional quantile we first find $y_j^{(s)}=\inf\{y:\tilde{F}^{(s)}(y|\boldsymbol{x})\ge q\}$ and the next smallest value $y_{j-1}^{(s)}$, then use linear interpolation to find quantile $y_q^{(s)}$ where $y_{j-1}^{(s)}<y_q^{(s)}<y_j^{(s)}$. For each of these functionals, point and interval estimates can be obtained by summarizing the $S$ values obtained from the posterior parameter draws without using asymptotic approximations. For example, the mean of the posterior conditional CDF distribution is $\frac{1}{S}\sum_{s=1}^S\tilde{F}^{(s)}(y_j|\boldsymbol{x})$. The 2.5% and 97.5% percentile of the $y_q^{(s)}$ values are the bounds of a 95% credible interval for the $q^{th}$ posterior conditional quantile.
+Using the MCMC draws from the posterior distribution, ($\tilde{\boldsymbol{\gamma}}^{(s)}$, $\tilde{\boldsymbol{\beta}}^{(s)}$) where $s=1,\ldots,S$, it is straightforward to calculate the distribution of the posterior conditional CDF, mean, quantiles or other functions of the parameters. For example, the distribution of the posterior conditional CDF at $y_j$ with covariates $\boldsymbol{x}$ can be approximated by the $S$ values $\tilde{F}^{(s)}(y_j|\boldsymbol{x})=G(\tilde{\gamma}_{r(y_j)}^{(s)}-\boldsymbol{x}^{T}\tilde{\boldsymbol{\beta}}^{(s)})$ and the complete conditional CDF can be obtained by a step function connecting $\tilde{F}^{(s)}(y_j|\boldsymbol{x})$ for $j=1,\ldots,J$. The posterior mean distribution conditional on covariates $\boldsymbol{x}$ is approximated by $\tilde{E}^{(s)}[Y|\boldsymbol{x}]=\sum_{j=1}^{J}y_j\tilde{f}^{(s)}(y_j|\boldsymbol{x})$ where $\tilde{f}^{(s)}(y_j|\boldsymbol{x})=\tilde{F}^{(s)}(y_j|\boldsymbol{x})-\tilde{F}^{(s)}(y_{j-1}|\boldsymbol{x})$ and $\tilde{F}^{(s)}(y_0|\boldsymbol{x}) \equiv 0$ so $\tilde{f}^{(s)}(y_1|\boldsymbol{x})=\tilde{F}^{(s)}(y_1|\boldsymbol{x})$. Note that for mixed continuous/discrete outcomes, such as those arising from a detection limit, data below or above the limit do not have a known $y_j$ value; in this case a value must be assigned to calculate the conditional mean. To estimate the $q^{th}$ posterior conditional quantile we first find $y_j^{(s)}=\inf\{y:\tilde{F}^{(s)}(y|\boldsymbol{x})\ge q\}$ and the next smallest value $y_{j-1}^{(s)}$, then use linear interpolation to find quantile $y_q^{(s)}$ where $y_{j-1}^{(s)}<y_q^{(s)}<y_j^{(s)}$. For each of these functionals, point and interval estimates can be obtained by summarizing the $S$ values obtained from the posterior parameter draws without using asymptotic approximations. For example, the mean of the posterior conditional CDF distribution is $\frac{1}{S}\sum_{s=1}^S\tilde{F}^{(s)}(y_j|\boldsymbol{x})$. The 2.5% and 97.5% percentile of the $y_q^{(s)}$ values are the bounds of a 95% credible interval for the $q^{th}$ posterior conditional quantile.
 
 <!--
 x_i instead of x
@@ -200,17 +197,15 @@ For example, the distribution of the posterior conditional CDF at $y_j$ with cov
 
 ## Simulations
 
-To evaluate the <!--long-run frequency--> properties of the Bayesian CPM we generate data from several simulation scenarios:
+To evaluate the <!--long-run frequency--> properties of the Bayesian CPM for continuous and mixed outcomes we generate data from several simulation scenarios:
 \begin{align*}
 1.\; Y&=\exp(X_1\beta_1 + X_2 \beta_2 + \varepsilon) \quad \varepsilon \sim N(0,1)\\
 2.\; Y&=\exp(X_1\beta_1 + X_2 \beta_2 + \varepsilon) \quad \varepsilon \sim Logistic(0,1/3)\\
 3.\; Y&=X_1\beta_1 + X_2 \beta_2 + \varepsilon \quad \varepsilon \sim Gumbel(0,1)
 \end{align*}
-where $\beta_1=1$, $\beta_2=-0.5$, $X_1 \sim Bernoulli(0.5)$ and $X_2 \sim N(0,1)$
+where $\beta_1=1$, $\beta_2=-0.5$, $X_1 \sim Bernoulli(0.5)$ and $X_2 \sim N(0,1)$. For each scenario a second set of simulations was used to evaluate a mixed discrete/continuous outcome such as a lower limit of detection; for scenario (1) and (2) values of $Y<1$ to were set to 1, for scenario (3) values of $Y<0$ were set to 0. The uncensored and censored outcome data based on (1) and (3) were evaluated using a Bayesian CPM with the properly specified probit and loglog links, respectively. For scenario (2) a logit link Bayesian CPM (which implies $\varepsilon \sim Logistic(0,1)$) was used. In each of the six outcome models, three $\boldsymbol{\alpha}$ concentration hyperparameters ($1/J$, $1/(2+(J/3))$, and $1/(0.8+0.35J)$) were considered for $p(\boldsymbol{\pi_{.}}|\boldsymbol{\alpha})$ for 18 model and prior combinations. Further, sample sizes $n=25,50,100,200$ and $400$ were used under each model/prior combination for a total of 90 simulation models. $1,000$ datasets were generated under each simulation model.
 
-For each scenario a second set of simulations was used to evaluate a mixed discrete/continuous outcome such as a lower limit of detection. For scenario (1) and (2) values of $Y<1$ to were set to 1, for scenario (3) values of $Y<0$ were set to 0. The continuous and mixed outcome data based on (1) and (3) were evaluated using a Bayesian CPM with the properly specified probit and loglog links, respectively. For scenario (2) a logit link Bayesian CPM (which implies $\varepsilon \sim Logistic(0,1)$) was used. In each of the six outcome models, three $\boldsymbol{\alpha}$ concentration hyperparameters ($1/J$, $1/(2+(J/3))$, $1/(0.8+0.35J)$) were considered for $p(\boldsymbol{\pi_{.}}|\boldsymbol{\alpha})$ for 18 model and prior combinations. Further, sample sizes $n=25,50,100,200$ and $400$ were considered for each model/prior combination for a total of 90 simulation models. $1,000$ datasets were generated under each simulation model.
-
-We examine the average percent bias of the posterior median for parameters $\beta_1$ and $\beta_2$ and five $\gamma_j$ parameters corresponding to $y$ values spaced across the range of the data. For scenario (1) $\boldsymbol{y}=\{y_1=e^{-1},y_2=e^{-0.33},y_3=e^{0.5},y_4=e^{1.33},y_5=e^2\}$, for scenario (2) $\boldsymbol{y}=\{y_1=e^{-0.5},y_2=e^{0},y_3=e^{0.5},y_4=e^{1},y_5=e^{1.5}\}$ and for scenario (3) $\boldsymbol{y}=\{y_1=-0.3,y_2=0,y_3=0.5,y_4=1.5,y_5=2.5\}$. For the censored outcomes, estimates are only available for the uncensored values of $\boldsymbol{y}$. We also calculate average percent bias of the conditional CDF for $\boldsymbol{y}$ when $X_1=1$ and $X_2=1$, and the conditional median, mean and 20$^{th}$ percentile at $(X_1=1,X_2=1)$ and $(X_1=1,X_2=0)$.
+We examine the average percent bias of the posterior median for parameters $\beta_1$ and $\beta_2$ and five $\gamma_j$ parameters corresponding to $y$ values spaced across the range of the data. For scenario (1) $\boldsymbol{y}=\{y_1=e^{-1},y_2=e^{-0.33},y_3=e^{0.5},y_4=e^{1.33},y_5=e^2\}$, for scenario (2) $\boldsymbol{y}=\{y_1=e^{-0.5},y_2=e^{0},y_3=e^{0.5},y_4=e^{1},y_5=e^{1.5}\}$ and for scenario (3) $\boldsymbol{y}=\{y_1=-0.3,y_2=0,y_3=0.5,y_4=1.5,y_5=2.5\}$. For the censored outcomes, estimates are only available for the values of $\boldsymbol{y}$ above the censoring threshold. We also calculate average percent bias of the conditional CDF for $\boldsymbol{y}$ when $X_1=1$ and $X_2=1$, and the conditional median, mean and 20th percentile at $(X_1=1,X_2=1)$ and $(X_1=1,X_2=0)$.
 
 <!--
 For scenarios (2) and (3), we also calculate the conditional and 80$^{th}$ percentile at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$.
@@ -222,9 +217,9 @@ For scenarios (2) and (3), we also calculate the conditional and 80$^{th}$ perce
 
 The data for the case study were collected from 216 HIV-positive adults on antiretroviral therapy in two cohort studies (Vanderbilt Lipoatrophy and Neuropathy Cohort (LiNC), n=147; Adiposity and Immune Activation Cohort (AIAC), n=69). Further details on the study design and cohorts are provided in Koethe et al. [@koethe_serum_2012; @koethe_metabolic_2015]. Because people living with HIV have increased risk of diabetes and cardiovascular disease, the aim of the analysis was to estimate the association between body mass index (BMI) and several inflammation biomarkers in this population, adjusting for additional covariates: age, sex, race, smoking status, study location and CD4 cell count.
 
-We examine the biomarkers Interleukin 6 (IL-6) and Interleukin 1 beta (IL-1-$\beta$); both are right-skewed with 3% and 39% of values censored below the lower limit of detection, respectively. Censored values are set to 0. To account for skewness and censoring we fit Bayesian CPM models using logit, probit, and loglog link functions, noninformative $\beta$ priors and a concentration parameter of either $\boldsymbol{\alpha}=1/J$ or $\boldsymbol{\alpha}=1/(0.8+0.35J)$ for the Dirichlet distribution to estimate the association between BMI and the conditional mean, median, and 90th quantile of each biomarker.
+We examine the biomarkers Interleukin 6 (IL-6) and Interleukin 1 beta (IL-1-$\beta$); both are right-skewed with 3% and 39% of values censored below the lower limit of detection, respectively. Censored values are set to 0. To account for skewness and censoring we fit Bayesian CPM models using logit, probit, and loglog link functions, noninformative $\beta$ priors and a concentration parameter of either $\boldsymbol{\alpha}=1/J$ or $\boldsymbol{\alpha}=1/(0.8+0.35J)$ for the Dirichlet prior to estimate the association between BMI and the conditional mean, median, and 90th quantile of each biomarker.
 
-We evaluate convergence of each model using $\hat{R}$ scale reduction factor [@gelman_bayesian_2014] and traceplots of MCMC draws. Model comparison is performed using the difference in expected log predictive density (ELPD) calculated using leave-one-out cross-validation [@vehtari_practical_2017]. Model fit is assessed using graphical checks of the of posterior predictive distribution and posterior predictive p-values [@stern_bayesian_2005; @gelman_bayesian_2014].
+We evaluate convergence using $\hat{R}$ scale reduction factor [@gelman_bayesian_2014] and traceplots of MCMC draws. Model comparison is performed using the difference in expected log predictive density (ELPD) calculated using leave-one-out cross-validation [@vehtari_practical_2017]. Model fit is assessed with graphical checks of the posterior predictive distribution and posterior predictive p-values [@stern_bayesian_2005; @gelman_bayesian_2014].
 
 <!--
 Model checking
@@ -240,22 +235,22 @@ Model checking
 
 ## Simulations
 
-A Bayesian CPM was fit to each of the 1000 simulation datasets for each scenario/prior/sample size combination [!! update here - what point est used, etc] and the results averaged. Each model  was run with 2 chains using 2000 warmup and 4000 total iterations for a total of 4000 posterior parameter vector draws per model. 
+A Bayesian CPM was fit to each of the 1000 simulation datasets for each scenario/prior/sample size combination. For each simulation dataset, the median of the posterior distribution of the parameter or conditional CDF, mean, or quantile was used as a point estimate. These point estimates were compared to the true value from the generating model and the results averaged over all simulation datasets. Each model was run with 2 MCMC chains using 2000 warmup and 4000 total iterations for a total of 4000 posterior parameter vector draws per model. 
 
-In general, the Bayesian CPM had reasonable performance in estimating parameters and conditional quantities for the simulation settings explored; especially for larger sample sizes. However, performance was poor for some quantities and may be sensitive to the conditioning covariate values and censoring threshold where the model extrapolates outside the observed data range. The three $\boldsymbol{\alpha}$ values produced similar results for most scenarios; no single prior choice was best across all parameters and quantities of interest.
+In general, the Bayesian CPM had reasonable performance in estimating parameters and conditional quantities for the simulation settings explored; especially for larger sample sizes. However, performance was poor for some quantities and may be sensitive to the conditioning covariate values and censoring threshold<!-- where the model extrapolates outside the observed data range-->. The three $\boldsymbol{\alpha}$ values produced similar results for most scenarios; no prior choice was best across all parameters and quantities of interest.
 
 ### Parameters
 
-For scenario (1) using a properly specified probit link CPM, the average percent bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ are shown in figure \@ref(fig:simplt-pars-1) for the uncensored and censored outcome data.  Percent bias was largest for the smallest sample sizes, but the direction and magnitude of the bias depends on the outcome, concentration prior and parameter. Across both outcomes, the estimates of $\beta_1$ and all $\gamma$s were larger using the $\boldsymbol{\alpha}=1/J$ concentration prior compared to the $\boldsymbol{\alpha}=1/(0.8+0.35J)$ or $\boldsymbol{\alpha}=1/(2+(J/3))$ concentration priors while the $\beta_2$ estimates were smaller with $\boldsymbol{\alpha}=1/J$. For the $\beta$ parameters, the priors $\boldsymbol{\alpha}=1/(0.8+0.35J)$ and $\boldsymbol{\alpha}=1/(2+(J/3))$ produce less biased estimates than $\boldsymbol{\alpha}=1/J$ for both outcomes. The situation is more complex for the $\gamma$ parameters. With the uncensored outcome, the $\boldsymbol{\alpha}=1/J$ prior estimate is less biased for $\gamma_{y_1}$ and $\gamma_{y_2}$, but more biased for $\gamma_{y_3}$, $\gamma_{y_4}$, and $\gamma_{y_5}$; with the censored outcome, the $\boldsymbol{\alpha}=1/J$ prior estimate is less biased for $\gamma_{y_3}$, but more biased for $\gamma_{y_4}$ and $\gamma_{y_5}$. 
+For scenario (1) using a properly specified probit link CPM, the average percent bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ is shown in figure \@ref(fig:simplt-pars-1) for the uncensored and censored outcome data.  Average percent bias is largest for the smallest sample sizes, but the direction and magnitude of the bias depends on the outcome, concentration prior and parameter. Across both outcomes, the estimates of $\beta_1$ and all $\gamma$s are larger using the $\boldsymbol{\alpha}=1/J$ concentration prior than the $\boldsymbol{\alpha}=1/(0.8+0.35J)$ or $\boldsymbol{\alpha}=1/(2+(J/3))$ concentration priors while the $\beta_2$ estimates are smaller with $\boldsymbol{\alpha}=1/J$. For the $\beta$ parameters, the priors $\boldsymbol{\alpha}=1/(0.8+0.35J)$ and $\boldsymbol{\alpha}=1/(2+(J/3))$ produce less biased estimates than $\boldsymbol{\alpha}=1/J$ for both outcomes. The situation is more complex for the $\gamma$ parameters. With the uncensored outcome, the $\boldsymbol{\alpha}=1/J$ prior estimate is less biased for $\gamma_{y_1}$ and $\gamma_{y_2}$, but more biased for $\gamma_{y_3}$, $\gamma_{y_4}$, and $\gamma_{y_5}$; with the censored outcome, the $\boldsymbol{\alpha}=1/J$ prior estimate is less biased for $\gamma_{y_3}$, but more biased for $\gamma_{y_4}$ and $\gamma_{y_5}$. 
 
 
 ```{r simplt-pars-1, fig.cap="Bias in parameters for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_a_pars.png"))
 ```
 
-Figure \@ref(fig:simplt-pars-2) shows the average bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ for scenario (2) using a logit link CPM. Unlike scenario (1), the assumed scale of the logit link ($\varepsilon \sim Logistic(0,1)$) does not match the scale from the simulation model ($\varepsilon \sim Logistic(0,1/3)$). In this case it can be shown that the CPM parameter estimates are proportional to the parameters from the generating simulation model. Assume latent $Y^*=\beta'X + a\varepsilon$ with $\varepsilon \sim F_{\varepsilon}$ assumed known and constant scaling factor $a>0$, and observed $Y=H(Y^*)$ with increasing function $H(t)$. Then $Y=H(\beta'X+a\varepsilon)=H'(\xi'X+\varepsilon)$ where $\xi=a^{-1}\beta$ and $H'(t)=H(at)$ so $Pr(Y \le y|X)=Pr(H'(\xi'X+\varepsilon)\le y|X)=F_{\varepsilon}(H'^{-1}(y)-\xi'X)$. Using a CPM with link function $F_{\varepsilon}^{-1}$ to analyze the observed outcome $Y$ results in estimates of $\xi=a^{-1}\beta$ for the linear predictor coefficients and $H'^{-1}=a^{-1}H^{-1}$ for the intercept function. In this sense, the parameter estimates are biased because they are on the incorrect scale. If the estimates are adjusted using the scale factor, $a$, the bias in the parameters follows a similar pattern as scenario (1) <!--(make fig?)-->. However in practice, the value of this scale factor is unknown.
+Figure \@ref(fig:simplt-pars-2) shows the average percent bias in the posterior median for $\beta_1$, $\beta_2$, and $\gamma_{y_k}$ for scenario (2) using a logit link CPM. The average percent bias is very large ($\pm 200\%$) for all parameters. Unlike scenario (1), the assumed scale of the logit link ($\varepsilon \sim Logistic(0,1)$) does not match the scale from the simulation model ($\varepsilon \sim Logistic(0,1/3)$). In this case it can be shown that the CPM parameter estimates are proportional to the parameters from the generating simulation model. Assume latent $Y^*=\beta'X + a\varepsilon$ with $\varepsilon \sim F_{\varepsilon}$ assumed known and constant scaling factor $a>0$, and observed $Y=H(Y^*)$ with increasing function $H(t)$. Then $Y=H(\beta'X+a\varepsilon)=H'(\xi'X+\varepsilon)$ where $\xi=a^{-1}\beta$ and $H'(t)=H(at)$ so $Pr(Y \le y|X)=Pr(H'(\xi'X+\varepsilon)\le y|X)=F_{\varepsilon}(H'^{-1}(y)-\xi'X)$. Using a CPM with link function $F_{\varepsilon}^{-1}$ to analyze the observed outcome $Y$ results in estimates of $\xi=a^{-1}\beta$ for the linear predictor coefficients and $H'^{-1}=a^{-1}H^{-1}$ for the intercept function. In this sense, the parameter estimates are biased because they are on the incorrect scale (i.e., the parameter estimates for scenario (2) are scaled by a factor of $(1/3)^{-1}=3$). If the estimates were adjusted using the scale factor, $a$, the bias in the parameters would follow a similar pattern as scenario (1)<!--(make fig?)-->. However in practice, the value of this scale factor is unknown.
 
-For scenario (3) using the correctly specified loglog link with an identity transformation, overall trends are similar to scenario (1) (See supplemental figure \@ref(fig:simplt-pars-3)). 
+For scenario (3) using the correctly specified loglog link with an identity transformation, overall trends resemble those in scenario (1) (see supplemental figure \@ref(fig:simplt-pars-3)). 
 
 <!--
 For scenario (3) using the correctly specified loglog link with an identity transformation, bias is small for all parameters for both uncensored and censored outcomes except with the $n=25$ sample size. The estimates using prior $\boldsymbol{\alpha}=1/J$ are slightly more biased than the other concentration priors. (See supplemental figure \@ref(fig:simplt-pars-3)). 
@@ -268,7 +263,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_c_pars.png"))
 
 ### Conditional CDF
 
-Figure \@ref(fig:simplt-cdf-1) shows the average percent bias in the posterior conditional CDF for scenario (1). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the smallest sample sizes, $n=25$ and $n=50$. In addition, for conditional CDF estimates at $y<e^{0.5}$, the concentration prior $\alpha=1/J$ produces estimates that are slightly more biased than the other reciprocal priors. The direction of the bias does not show a consistent trend across sample size. Similar patterns are seen for the the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes. The results are similar for scenario (2) and (3) under both outcomes: larger percent bias for the conditional estimates of $F(y|X_1=1,X_2=1)$ for lower values of $y$ and smaller sample sizes (supplemental figs. \@ref(fig:simplt-cdf-2) and \@ref(fig:simplt-cdf-3)).
+Figure \@ref(fig:simplt-cdf-1) shows the average percent bias in the posterior conditional CDF for scenario (1). For the uncensored outcome, the conditional CDF estimates of $F(y|X_1=1,X_2=1)$ have larger percent bias when $y<e^{0.5}$, especially for the sample sizes $n=25$ and $n=50$. In addition, for conditional CDF estimates at $y<e^{0.5}$, the concentration prior $\boldsymbol{\alpha}=1/J$ produces estimates that are slightly more biased than the other reciprocal priors. The direction of the bias does not show a consistent trend across sample sizes. Similar patterns are seen for the censored outcome, less biased estimates for the CDF at higher $y$ values and larger sample sizes. The results are much the same for scenario (2) and (3) under both outcomes: larger average percent bias for the conditional estimates of $F(y|X_1=1,X_2=1)$ for lower values of $y$ and smaller sample sizes (supplemental figs. \@ref(fig:simplt-cdf-2) and \@ref(fig:simplt-cdf-3)).
 
 ```{r simplt-cdf-1, fig.cap="Bias in conditional CDF for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_cdf.png"))
@@ -276,9 +271,9 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_cdf.png"))
 
 ### Conditional Mean
 
-The top row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) present the bias in the posterior conditional mean for the uncensored simulation outcomes at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ in scenarios (1) and (2), respectively. For these scenarios, the average percent bias was less than 5\% for all sample sizes and priors.  In contrast, the bottom row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) show the bias in posterior conditional mean estimates for the censored outcomes where a value of $y=1$ was used in the conditional mean calculation for outcomes censored at $Y<1$. Using the censoring threshold value for censored observations can result in inflated average percent bias compared to the uncensored case depending on where the threshold falls in relation to the true conditional distribution and the value chosen for censored observations. For example, the average percent bias of $E(Y|X_1=1,X_2=1)$ for the censored outcome in scenario (1) is around 40\%. 
+The top row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) present the average percent bias in the posterior conditional mean for the uncensored simulation outcomes at $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ in scenarios (1) and (2), respectively. For these scenarios, the average percent bias is less than 5\% for all sample sizes and priors. In contrast, the bottom row of figures \@ref(fig:simplt-mn-1) and \@ref(fig:simplt-mn-2) show the bias in posterior conditional mean estimates for the censored outcomes where a value of $y=1$ was used in the conditional mean calculation for outcomes censored at $Y<1$. Using the censoring threshold value for censored observations can result in inflated average percent bias compared to the uncensored case depending on where the threshold falls in relation to the true conditional distribution. For example, the average percent bias of $E(Y|X_1=1,X_2=1)$ for the censored outcome in scenario (1) is around 40\% even for the largest sample size. 
 
-For scenario (3) the average percent bias for the uncensored outcome ranged from -12.5\% to $<-1.0$\% with larger bias for the $\boldsymbol{\alpha}=1/J$ prior and smaller $n$ (fig. \@ref(fig:simplt-mn-3)). As in the first two scenarios, the censored outcome which used a value of $y=0$ in the conditional mean calculation for observations less than 0 showed a positive shift in average percent bias at $(X_1=1,X_2=1)$ although to a much smaller degree than scenario (1).
+For scenario (3) the average percent bias for the uncensored outcome ranges from -12.5\% to -1.0\% with larger bias for the $\boldsymbol{\alpha}=1/J$ prior and smaller $n$ (fig. \@ref(fig:simplt-mn-3)). As in the first two scenarios, the censored outcome (which replaced outcomes less than 0 with a value of $y=0$) shows a positive shift in average percent bias at $(X_1=1,X_2=1)$ although to a much smaller degree than scenario (1).
 
 ```{r simplt-mn-1, fig.cap="Bias in conditional mean for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_mn.png"))
@@ -294,9 +289,9 @@ knitr::include_graphics(file.path(wd,"fig","sim_d_mn.png"))
 
 ### Conditional Median and Quantiles
 
-The simulation results for the conditional posterior median in scenario (1) are shown in figure \@ref(fig:simplt-med-1). Across outcomes, the conditional median estimate had a positive  average percent bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There were negligible differences in average percent bias of the median estimates for the three $\boldsymbol{\alpha}$ concentration parameters. The pattern was similar for scenario (2) (supp. fig. \@ref(fig:simplt-med-2)). For both outcomes under scenario (3), average percent bias in the conditional median estimate was smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There were only small differences between the three $\boldsymbol{\alpha}$ concentration parameters except for the small sample sizes (fig. \@ref(fig:simplt-med-3)). 
+The simulation results for the conditional posterior median in scenario (1) are shown in figure \@ref(fig:simplt-med-1). Across outcomes, the conditional median estimates have a positive average percent bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There are negligible differences in average percent bias of the median estimates for the three $\boldsymbol{\alpha}$ concentration parameter priors. The pattern looks similar for scenario (2) (supp. fig. \@ref(fig:simplt-med-2)). For both outcomes under scenario (3), average percent bias in the conditional median estimate is smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There are only small differences between the three $\boldsymbol{\alpha}$ concentration parameters except with the smaller sample sizes (fig. \@ref(fig:simplt-med-3)). 
 
-Figure \@ref(fig:simplt-q20-a) presents the results for the posterior conditional 20th percentile in scenario (1). The uncensored outcome estimates are quite biased (between 25\% and 90\%) for the smaller sample sizes. The magnitude of the bias also varies based on the values of the conditioning variables, $X_1$ and $X_2$, with larger bias when the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size. For scenario (2) the estimates of the posterior conditional 20th percentile with the uncensored outcome are again positively biased for the smaller sample sizes with more bias for the $\boldsymbol{\alpha}=1/J$ concentration prior (figure \@ref(fig:simplt-q20-b)). The estimates of the conditional 20th percentile for the censored outcome show a similar pattern as the uncensored outcome. Under scenario (3) the uncensored outcome estimates of the conditional 20th percentile have reasonably small average percent bias for all the priors and sample sizes except at $(X_1=1,X_2=1)$ when $n=25$. Similar to scanerio (1), the censored outcome estimates show small average percent bias at $(X_1=1,X_2=0)$, but very large average percent bias at $(X_1=1,X_2=1)$ (fig. \@ref(fig:simplt-q20-c)).
+Figure \@ref(fig:simplt-q20-a) presents the results for the posterior conditional 20th percentile in scenario (1). The uncensored outcome estimates are quite biased (between 25\% and 90\%) for the smaller sample sizes. The magnitude of the bias varies based on the values of the conditioning variables, $X_1$ and $X_2$, with larger bias when the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size. For scenario (2) the estimates of the posterior conditional 20th percentile with the uncensored outcome are again positively biased for the smaller sample sizes with more bias for the $\boldsymbol{\alpha}=1/J$ concentration prior (figure \@ref(fig:simplt-q20-b)). The estimates of the conditional 20th percentile for the censored outcome show a similar pattern as the uncensored outcome. Under scenario (3) the uncensored outcome estimates of the conditional 20th percentile have reasonably small average percent bias for all the priors and sample sizes except at $(X_1=1,X_2=1)$ when $n=25$. Similar to scanerio (1), the censored outcome estimates show small average percent bias at $(X_1=1,X_2=0)$, but very large average percent bias at $(X_1=1,X_2=1)$ (fig. \@ref(fig:simplt-q20-c)).
 
 <!--
 Figure \@ref(fig:simplt-q80-b) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes in scenario 2. Similar to the 20th percentile estimates, the estimates are positively biased for smaller sample sizes. But in contrast, the estimates using the $\alpha=1/J$ concentration prior are *less* biased compared to the other priors. Figure \@ref(fig:simplt-q80-c) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes in scenario 3 (avg bias instead of pct bias - check!!).
@@ -309,7 +304,6 @@ knitr::include_graphics(file.path(wd,"fig","sim_b_med.png"))
 ```{r simplt-med-3, fig.cap="Bias in conditional median for simulations using loglog link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_d_med.png"))
 ```
-
 
 ```{r simplt-q20-a, fig.cap="Bias in conditional 20th percentile for simulations using probit link", fig.align='center', out.width='90%'}
 knitr::include_graphics(file.path(wd,"fig","sim_b_q20.png"))
